--- a/jumbotron.css
+++ b/jumbotron.css
@@ -2,3 +2,16 @@
 body {
   padding-top: 3.5rem;
 }
+
+.img {
+  width:600px;
+  height:300px;
+}
+
+.img1 {
+  width:180px;
+  height:170px;
+}
+
+span { font-size: 1.125em;}
+span b { font-size: 1.125em; }
